implement POST for skill and contact
