# contacts-api/src/main/java/owt/demo/contacts/api/endpoints/ContactsController.java
@@ -1,17 +1,12 @@
 package owt.demo.contacts.api.endpoints;
 
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
+import io.swagger.annotations.*;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RestController;
 import owt.demo.contacts.api.ApiUtil;
 import owt.demo.contacts.api.ContactApi;
 import owt.demo.contacts.api.services.ContactsService;
@@ -46,4 +41,8 @@ public class ContactsController implements ContactApi {
         return ResponseEntity.ok(contactsService.getContacts());
     }
 
+    @Override
+    public ResponseEntity<Object> addContact(Contact body) throws Exception {
+        return ResponseEntity.created(contactsService.saveContact(body)).build();
+    }
 }
