# contacts-api/src/main/java/owt/demo/contacts/api/endpoints/SkillsController.java
@@ -5,11 +5,9 @@ import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiResponse;
 import io.swagger.annotations.ApiResponses;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import owt.demo.contacts.api.ApiUtil;
@@ -44,5 +42,10 @@ public class SkillsController implements SkillApi {
             }
         });
         return ResponseEntity.ok(skillsService.getSkills());
+    }
+
+    @Override
+    public ResponseEntity<Object> addSkill(Skill body) throws Exception {
+        return ResponseEntity.created(skillsService.saveSkill(body)).build();
     }
 }
